# VexO-Web

./: .gitignore
backend/: .gitignore  GOOGLE_DRIVE_SETUP.md  README.md  README_new.md  credentials.json.example  fix_google_auth.py  frontend_example.html  google_drive_auth.py  main.py  pyproject.toml  requirements.txt
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
